--- a/masonry.cabal
+++ b/masonry.cabal
@@ -15,8 +15,9 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lib
+  exposed-modules:     RandNum
   build-depends:       base >= 4.7 && < 5
+                     , random
   default-language:    Haskell2010
 
 executable masonry-exe
@@ -25,6 +26,7 @@ executable masonry-exe
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , masonry
+                     , random
   default-language:    Haskell2010
 
 test-suite masonry-test
