--- a/masonry.cabal
+++ b/masonry.cabal
@@ -18,6 +18,7 @@ library
   exposed-modules:     Masonry
                      , PrimRoom
                      , RandNum
+                     , Type
   build-depends:       base >= 4.7 && < 5
                      , random
                      , linear
