Export Rects as svg

--- a/masonry.cabal
+++ b/masonry.cabal
@@ -19,6 +19,7 @@ library
                      , PrimRoom
                      , RandNum
                      , Type
+                     , SVG
   build-depends:       base >= 4.7 && < 5
                      , random
                      , linear
