--- a/masonry.cabal
+++ b/masonry.cabal
@@ -21,7 +21,9 @@ library
                      , Type
                      , SVG
                      , Separate
+                     , Render
   build-depends:       base >= 4.7 && < 5
+                     , sdl2
                      , random
                      , linear
   default-language:    Haskell2010
@@ -35,6 +37,7 @@ executable masonry-exe
                      , random
                      , linear
                      , sdl2
+                     , StateVar
   default-language:    Haskell2010
 
 test-suite masonry-test
