--- a/masonry.cabal
+++ b/masonry.cabal
@@ -26,6 +26,7 @@ library
                      , sdl2
                      , random
                      , linear
+                     , safe
   default-language:    Haskell2010
 
 executable masonry-exe
