--- a/masonry.cabal
+++ b/masonry.cabal
@@ -16,6 +16,7 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Masonry
+                     , Conf
                      , PrimRoom
                      , RandNum
                      , Render
@@ -27,6 +28,8 @@ library
                      , random
                      , linear
                      , safe
+                     , containers
+                     , split
   default-language:    Haskell2010
 
 executable masonry-exe
