--- a/masonry.cabal
+++ b/masonry.cabal
@@ -17,6 +17,7 @@ library
   hs-source-dirs:      src
   exposed-modules:     Masonry
                      , Conf
+                     , Field
                      , PrimRoom
                      , RandNum
                      , Render
