--- a/masonry.cabal
+++ b/masonry.cabal
@@ -33,7 +33,7 @@ library
                      , split
   default-language:    Haskell2010
 
-executable masonry-exe
+executable masonry
   hs-source-dirs:      app
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
